--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -473,56 +473,56 @@ foxtrick.transferfilter.Foxtrick_Filters=مصفيات FoxTrick
 
 #Locales for date and time
 #Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
-foxtrick.datetimestrings.days=days
-foxtrick.datetimestrings.day=day
+foxtrick.datetimestrings.days=أيام
+foxtrick.datetimestrings.day=يوم
 # Word for 'days' in context '2, 3 or 4 days' for Slavic languages, where it different than one for '0, 5 ... 9 days'
-foxtrick.datetimestrings.days234=days
-foxtrick.datetimestrings.hours=hr
-foxtrick.datetimestrings.minutes=min
-foxtrick.datetimestrings.short_seasons=s
-foxtrick.datetimestrings.short_weeks=wk
-foxtrick.datetimestrings.short_days=d
+foxtrick.datetimestrings.days234=أيام
+foxtrick.datetimestrings.hours=ساعة
+foxtrick.datetimestrings.minutes=دقيقة
+foxtrick.datetimestrings.short_seasons=م
+foxtrick.datetimestrings.short_weeks=أ
+foxtrick.datetimestrings.short_days=ي
 #Transfer prices
-transfercompare_medianprice=Median price
-transfercompare_avgprice=Average price
+transfercompare_medianprice=وسط السعر
+transfercompare_avgprice=متوسط السعر
 
-match.type.league=League
-match.type.qualification=Qualification
-match.type.cup=Cup
-match.type.friendly=Friendly
-match.type.friendly.cup=Friendly (Cup rules)
-match.type.masters=Hattrick Masters
-match.type.nt.friendly=National Friendly
-match.type.nt.competitive=World Cup
-match.type.youth.league=Youth League
-match.type.youth.friendly=Youth Friendly
-match.type.youth.friendly.cup=Youth Friendly (Cup rules)
+match.type.league=دوري
+match.type.qualification=تأهيلية
+match.type.cup=كأس
+match.type.friendly=ودية
+match.type.friendly.cup=ودية (بنظام الكأس)
+match.type.masters=أبطال هاتريك
+match.type.nt.friendly=ودية دولية
+match.type.nt.competitive=كأس العالم
+match.type.youth.league=دوري الشباب
+match.type.youth.friendly=ودي الشباب
+match.type.youth.friendly.cup=ودي الشباب (بنظام الكأس)
 
 #Skills
-Playmaking=Playmaking
-Playmaking.abbr=PM
-Winger=Winger
-Winger.abbr=WI
-Scoring=Scoring
-Scoring.abbr=SC
-Passing=Passing
-Passing.abbr=PS
-Defending=Defending
-Defending.abbr=DF
-Keeper=Keeper
-Keeper.abbr=KP
-Set_pieces=Set pieces
-Set_pieces.abbr=SP
+Playmaking=صناعة اللعب
+Playmaking.abbr=ص
+Winger=الجناح
+Winger.abbr=ج
+Scoring=التهديف
+Scoring.abbr=تهـ
+Passing=التمرير
+Passing.abbr=تمـ
+Defending=الدفاع
+Defending.abbr=د
+Keeper=حراسة المرمى
+Keeper.abbr=ح م
+Set_pieces=الركلات الثابتة
+Set_pieces.abbr=رث
 
-PsicoTSI=PsicoTSI (average form)
+PsicoTSI=PsicoTSI (متوسط التكوين البدني)
 PsicoTSI.abbr=Psico
-HTMS_Ability=HTMS Points Ability
-HTMS_Ability.abbr=Ability
-HTMS_Potential=HTMS Points Potential
-HTMS_Potential.abbr=Potential
+HTMS_Ability=نقاط قدرة HTMS
+HTMS_Ability.abbr=القدرة
+HTMS_Potential=نقاط إمكانية HTMS
+HTMS_Potential.abbr=الإمكانية
 
-PlayerCategory=Player category
-PlayerCategory.abbr=Ca
+PlayerCategory=فئة اللاعب
+PlayerCategory.abbr=ف
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
 categories.GK=GK
 categories.WB=WB
@@ -530,152 +530,152 @@ categories.CD=CD
 categories.W=W
 categories.IM=IM
 categories.FW=FW
-categories.S=S
-categories.R=R
-categories.E1=E1
-categories.E2=E2
+categories.S=ب
+categories.R=إ
+categories.E1=ز1
+categories.E2=ز2
 
-General=General
+General=عام
 
-PlayerNumber=Player number
+PlayerNumber=رقم اللاعب
 PlayerNumber.abbr=#
 
-TSI=Total Skill Index
+TSI=مؤشر المهارة الكلي
 TSI.abbr=TSI
 
-Personality=Personality
-Agreeability=Agreeability
-Agreeability.abbr=Ab
-Aggressiveness=Aggressiveness
-Aggressiveness.abbr=Ag
-Honesty=Honesty
-Honesty.abbr=Ho
+Personality=الشخصية
+Agreeability=الملاءمة
+Agreeability.abbr=مل
+Aggressiveness=العدوانية
+Aggressiveness.abbr=عد
+Honesty=الأمانة
+Honesty.abbr=أم
 
-Leadership=Leadership
-Leadership.abbr=LS
-Experience=Experience
-Experience.abbr=XP
+Leadership=القيادة
+Leadership.abbr=قيـ
+Experience=الخبرة
+Experience.abbr=خبـ
 
-Stamina=Stamina
-Stamina.abbr=Stm
-Form=Form
-Form.abbr=Fo
+Stamina=اللياقة البدنية
+Stamina.abbr=ليا
+Form=التكوين البدني
+Form.abbr=تكو
 
-Status=Status
-Status.abbr=Status
+Status=الحالة
+Status.abbr=الحالة
 
-Yellow_card=Yellow Card
-Yellow_card.abbr=Y
-Red_card=Red Card
-Red_card.abbr=R
+Yellow_card=بطاية صفراء
+Yellow_card.abbr=ص
+Red_card=بطاقة حمراء
+Red_card.abbr=ح
 
-Speciality=Speciality
-Speciality.abbr=Sp
+Speciality=التخصص
+Speciality.abbr=تخـ
 
-Last_match=Latest Match
-Last_match.abbr=Latest
-Last_stars=Latest Rating
-Last_stars.abbr=Rt
-Last_position=Latest Position
-Last_position.abbr=Pos
+Last_match=آخر مباراة
+Last_match.abbr=آخر
+Last_stars=آخر تقييم
+Last_stars.abbr=تق
+Last_position=آخر مركز
+Last_position.abbr=مرك
 
-Bruised=Bruised
-Bruised.abbr=Bru
-Injured=Injured
-Injured.abbr=Inj
+Bruised=مصاب بكدمة
+Bruised.abbr=كد
+Injured=مصاب
+Injured.abbr=مصاب
 
-Salary=Wage
-Salary.abbr=Wage
+Salary=الراتب
+Salary.abbr=الراتب
 
-TransferListed=Transfer-listed
-TransferListed.abbr=TL
+TransferListed=معروض في سوق الإنتقالات
+TransferListed.abbr=سوق
 
-NrOfMatches=Number of matches
-NrOfMatches.abbr=NM
-LeagueGoals=League goals
-LeagueGoals.abbr=LG
-CupGoals=Cup goals
-CupGoals.abbr=CG
-FriendliesGoals=Friendlies goals
-FriendliesGoals.abbr=FG
-CareerGoals=Career goals
-CareerGoals.abbr=G
-Hattricks=Hattricks
-Hattricks.abbr=HT
+NrOfMatches=عدد المباريات
+NrOfMatches.abbr=عم
+LeagueGoals=أهداف الدوري
+LeagueGoals.abbr=أد
+CupGoals=أهداف الكأس
+CupGoals.abbr=أك
+FriendliesGoals=أهداف الودية
+FriendliesGoals.abbr=أو
+CareerGoals=أهداف المهنة
+CareerGoals.abbr=أ
+Hattricks=هاتريك
+Hattricks.abbr=هات
 
-Current_club=Current club
-Current_club.abbr=Club
-Current_league=Current league
-Current_league.abbr=League
+Current_club=النادي الحالي
+Current_club.abbr=نادي
+Current_league=الدوري الحالي
+Current_league.abbr=دوري
 
-JoinedSince=Joined since
-JoinedSince.abbr=Since
-HomeGrown=Youthplayer
-HomeGrown.abbr=YP
+JoinedSince=إنضم منذ
+JoinedSince.abbr=منذ
+HomeGrown=لاعب شاب
+HomeGrown.abbr=لش
 
-Hotlist=Hotlist
-Hotlist.abbr=Hot
+Hotlist=القائمة الساخنة
+Hotlist.abbr=ساخنة
 
-skilltable.youthplayer=youthplayer
-skilltable.rebought_youthplayer=rebought youthplayer
+skilltable.youthplayer=لاعب شاب
+skilltable.rebought_youthplayer=لاعب شاب تم إعادة شرائه
 
 #matchdetail
-foxtrick.matchdetail.midfield=Midfield
-foxtrick.matchdetail.attack=Attack
-foxtrick.matchdetail.defence=Defence
-foxtrick.matchdetail.total=Total
-foxtrick.shortcut.matchlineup=lineup
+foxtrick.matchdetail.midfield=الوسط
+foxtrick.matchdetail.attack=الهجوم
+foxtrick.matchdetail.defence=الدفاع
+foxtrick.matchdetail.total=المجموع
+foxtrick.shortcut.matchlineup=التشكيلة
 
-foxtrick.matchdetail.right=Right
-foxtrick.matchdetail.center=Center
-foxtrick.matchdetail.left=Left
-foxtrick.matchdetail.rightshort=R
-foxtrick.matchdetail.centershort=C
-foxtrick.matchdetail.leftshort=L
+foxtrick.matchdetail.right=يمين
+foxtrick.matchdetail.center=وسط
+foxtrick.matchdetail.left=يسار
+foxtrick.matchdetail.rightshort=ي
+foxtrick.matchdetail.centershort=و
+foxtrick.matchdetail.leftshort=س
 foxtrick.matchdetail.ifkshort=I
-foxtrick.bidconfirmation=Do you wish to bid for this player? The price is %s.
-foxtrick.tlconfirmation=Do you wish to transfer list this player? The asking price is %s.
-foxtrick.staffconfirmationhire=Do you wish to hire %num %kind?
-foxtrick.staffconfirmationsack=Do you wish to sack %num %kind?
-foxtrick.ntremoveconfirmation=Do you really want to add/remove this player from your squad?
-foxtrick.confirmstripserver=Do you want to strip the hattrick server from the links to make the usable in forum?
-foxtrick.conferences.signaturetoggle=Signature
-foxtrick.conferences.markunread=Mark unread from here
-foxtrick.tweaks.selectplayer=Select player
-foxtrick.linkscustom.selecticon=Select icon
-foxtrick.linkscustom.addpersonallink=Add personal link
-foxtrick.linkscustom.addlink=Add link
-foxtrick.linkscustom.remove=Remove
-foxtrick.linkscustom.copy=Copy
-foxtrick.linkscustom.export=Export
-foxtrick.linkscustom.confirmremove=Really remove?
-foxtrick.linkscustom.addtag=Add a tag
-foxtrick.linkscustom.tags=Tags
-foxtrick.linkscustom.help=Help
-foxtrick.linkscustom.helptext=First, this is just the editor mode. Clicking on the header of this box switches between editor and normal mode. Only in normal mode your own links are fully functional. External static links are easy to add, just add the full url (Example: http: \/\/alltid.org\/league\/427\/). For internal static links skip the server part (Example: \/World\/Series\/Default.aspx?LeagueLevelUnitID=427). You only need the tags for rarer dynamic links. With tags the links are dynamically changed using the information of the page you are on. For example http:\/\/alltid.org\/league\/[leagueid] would always lead you to the Alltid page of the series you are just viewing in Hattrick. The tags which are available on each page are listed in the select box. You can only use those which are listed on the page where you are adding your custom link. The text in the box is just a sample template. You can write a tag yourself (using []).
-foxtrick.linkscustom.helptext2=You also can export your links and share them. To do this you can click on the export button and select a file to save that link. Links are append to that file, hence you can save several links in one file. To import links go to the preference dialog and go to import preferences. Only the entries in the selected file will be imported, which in this case are your links. None of your previous links will be deleted.
-foxtrick.matches.income=Income:
-foxtrick.tweaks.Birthdays=Birthdays
-foxtrick.tweaks.BirthdayToday=Birthdays today
-foxtrick.tweaks.BirthdayLastWeek=Birthdays last week
-foxtrick.tweaks.BirthdayNextWeek=Birthdays next week
-foxtrick.copymatchid=Click to copy matchID to clipboard
-foxtrick.ExtendedPlayerDetails.perseason=/season
+foxtrick.bidconfirmation=هل تود المزايدة على هذا اللاعب؟ السعر هو %s.
+foxtrick.tlconfirmation=هل تود عرض هذا اللاعب في سوق الإنتقالات؟ السعر المطلوب هو %s.
+foxtrick.staffconfirmationhire=هل تود تعيين %num %kind?
+foxtrick.staffconfirmationsack=هل تود طرد %num %kind?
+foxtrick.ntremoveconfirmation=هل تود حقا إضافة/إزالة هذا اللاعب من تشكيلتك؟
+foxtrick.confirmstripserver=هل تود إزالة الروابط من سيرفر هاتريك لإستخدام المنتدى؟
+foxtrick.conferences.signaturetoggle=التوقيع
+foxtrick.conferences.markunread=تحديد كغير مقروء من هنا
+foxtrick.tweaks.selectplayer=إختيار اللاعب
+foxtrick.linkscustom.selecticon=إختيار الأيقونة
+foxtrick.linkscustom.addpersonallink=إضافة رابط شخصي
+foxtrick.linkscustom.addlink=إضافة رابط
+foxtrick.linkscustom.remove=إزالة
+foxtrick.linkscustom.copy=نسخ
+foxtrick.linkscustom.export=تصدير
+foxtrick.linkscustom.confirmremove=إزالة؟
+foxtrick.linkscustom.addtag=إضافة رمز
+foxtrick.linkscustom.tags=الرموز
+foxtrick.linkscustom.help=مساعدة
+foxtrick.linkscustom.helptext=أولا هذا هو وضع المحرر. النقر على عنوان هذا الصندوق يقوم بتغيير الوضع بين العادي ووضع المحرر. فقط في الوضع العادي تعمل  روابط الشخصية بشكل كامل. يمكن إضافة الروابط الثابتة الخارجية بسهولة. فقط قم بإضافة عنوان الويب كاملا مثل http: \/\/alltid.org\/league\/427\/. لإستخدام الروابط الثابتة الداخلية لا تقم بإضافة الجزء المتعلق بالسيرفر مثل \/World\/Series\/Default.aspx?LeagueLevelUnitID=427. تحتاج الرموز للروابط المتحركة النادرة. بإستخدام الرموز تتغير الروابط بشكل متحرك إلى المعلومات الموجودة في الصفحة التي تكون فيها. مثلا http:\/\/alltid.org\/league\/[leagueid] ستؤدي دائما إلى صفحة Alltid الخاصة بالدوري الذي تتصفحه في هاتريك. الرموز المتوفرة في كل صفحة موجودة في صندوق الإختيار. يمكنك فقط إستخدام الرموز الموجودة في الصفحة التي تقوم بإضافة رابط المخصصة فيها. النص الموجود في الصندوق عبارة عن قالب وضع كمثال للتوضيح فقط. يمكنك كتابة رمز خاص بك باستخدام [].
+foxtrick.linkscustom.helptext2=يمكنك كذلك تصدير روابط ومشاركتها مع الآخرين. لعمل هذا يمكنك النقر على زر التصدير ومن ثم إختيار ملف لحفظ ذلك الرابط. يتم إضافة الروابط إلى ذلك الملف لذلك يمكنك حفظ روابط متعددة في ملف واحد. لإستيراد الروابط توجه إلى صندوق التفضيلات ومن ثم إلى إستيراد التفضيلات. المدخلات في الملف فقط يتم إستيرادها والتي هي في هذه الحالة روابطك الشخصية. لن يتم حذف أي من روابطك السابقة.
+foxtrick.matches.income=الدخل:
+foxtrick.tweaks.Birthdays=أيام الميلاد
+foxtrick.tweaks.BirthdayToday=أيام الميلاد اليوم
+foxtrick.tweaks.BirthdayLastWeek=أيام الميلاد الأسبوع الماضي
+foxtrick.tweaks.BirthdayNextWeek=أيام الميلاد الأسبوع القادم
+foxtrick.copymatchid=أنقر لنسخ رقم المباراة إلى الحافظة
+foxtrick.ExtendedPlayerDetails.perseason=/الموسم
 
-foxtrick.defensiveTrainer=A %s trainer who is defence-minded.
-foxtrick.offensiveTrainer=A %s trainer who is fond of attacking.
-foxtrick.balancedTrainer=A %s trainer who is neither attack nor defence-minded.
+foxtrick.defensiveTrainer=هو مدرب %s وهو يتمتع بعقلية دفاعية.
+foxtrick.offensiveTrainer=هو مدرب %s وهو يتمتع بعقلية هجومية.
+foxtrick.balancedTrainer=هو مدرب %s وهو لا يتمتع بأي من العقليتين الدفاعية ولا الهجومية.
 
-notify.newMail=You have received %s new mail(s).
-notify.newForumMessage=There are %s new forum reply(s) to you.
+notify.newMail=لقد تلقيت %s رسالة بريدية جديدة.
+notify.newForumMessage=يوجد %s رد جديد في المنتدى موجه إليك
 
 htLive=HT Live
 
-foxtrick.modules_allpages=Modules running on all pages
-HTLanguageChanged=FoxTrick has detected a change in language. The language of FoxTrick is now set to %s.
+foxtrick.modules_allpages=الوحدات التي تعمل على كل الصفحات
+HTLanguageChanged=اكتشف FoxTrick تغييرا في اللغة. لغة FoxTrick الآن هي %s
 
-Coach=Coach
-CurrentSquad=Current squad
+Coach=المدرب
+CurrentSquad=التشكيلة الحالية
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
