--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -679,10 +679,10 @@ CurrentSquad=التشكيلة الحالية
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
-foxtrick.tweaks.actions=Actions
-foxtrick.tweaks.writeinguestbook=Write in Guestbook
-foxtrick.tweaks.copyplayerad=Copy player ad
-foxtrick.tweaks.copied=The player ad has been copied to the clipboard.
+foxtrick.tweaks.actions=إجراءات
+foxtrick.tweaks.writeinguestbook=اكتب في سجل الزوار
+foxtrick.tweaks.copyplayerad=نسخ رقم اللاعب
+foxtrick.tweaks.copied=تم نسخ رقم اللاعب في الحافظة.
 
 ratings.HatStats=HatStats
 ratings.LoddarStats=LoddarStats
@@ -691,141 +691,141 @@ ratings.VnukStats=VnukStats
 ratings.HTitaVal=HTitaVal
 ratings.GardierStats=GardierStats
 
-CopyRatings.both=Copy ratings (in HT-ML)
-CopyRatings.home=Copy home ratings (in HT-ML)
-CopyRatings.away=Copy away ratings (in HT-ML)
-CopyRatings.copied=The ratings have been copied to the clipboard.
+CopyRatings.both=نسخ التقيمات (بصيغة HT-ML)
+CopyRatings.home=نسخ تقيمات الفريق المضيف (بصيغة HT-ML)
+CopyRatings.away=نسخ تقيمات الفريق الضيف (بصيغة HT-ML)
+CopyRatings.copied=تم نسخ التقيمات في الحافظة.
 
-CopyYouth.trainingReport=Copy training report
-CopyYouth.trainingReport.copied=Training report has been copied.
-CopyYouth.scoutComment=Copy scout comment
-CopyYouth.scoutComment.copied=Scout comment has been copied.
-CopyYouth.playerSource=Copy player source
-CopyYouth.playerSource.copied=Player source has been copied.
-CopyYouth.fixturesSource=Copy fixtures source
-CopyYouth.fixturesSource.copied=Fixtures source has been copied.
-CopyYouth.goto=Go to %s
+CopyYouth.trainingReport=نسخ التقرير التدريبي
+CopyYouth.trainingReport.copied=تم نسخ التقرير التدريبي.
+CopyYouth.scoutComment=نسخ تعليق الكشاف
+CopyYouth.scoutComment.copied=تم نسخ تعليق الكشاف.
+CopyYouth.playerSource=نسخ مصدر اللاعب
+CopyYouth.playerSource.copied=تم نسخ مصدر اللاعب.
+CopyYouth.fixturesSource=نسخ مصدر المباريات
+CopyYouth.fixturesSource.copied=تم نسخ مصدر المباريات.
+CopyYouth.goto=التوجه إلى %s
 
-PasteClick.desc=Paste with SHIFT+LEFT MOUSE CLICK
+PasteClick.desc=النسخ باستخدام زر SHIFT + انقر زر الفأرة الأيسر
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
-foxtrick.tweaks.copyskilltable=Copy skill table to clipboard (in HT-ML)
-foxtrick.tweaks.skilltablecopied=The skill table source has been copied to the clipboard.
-foxtrick.tweaks.matchidcopied=The match ID has been copied to the clipboard.
-foxtrick.tweaks.postidcopied=Post ID [post=%s] has been copied to the clipboard.
-foxtrick.tweaks.postingcopied=Posting %s has been copied to the clipboard.
+foxtrick.tweaks.copyskilltable=نسخ جدول المهارات إلى الحافظة (بصيغة HT-ML)
+foxtrick.tweaks.skilltablecopied=تم نسخ جدول المهارات في الحافظة.
+foxtrick.tweaks.matchidcopied=تم نسخ رقم المباراة في الحافظة.
+foxtrick.tweaks.postidcopied=تم نسخ رقم الرسالة [post=%s] في الحافظة.
+foxtrick.tweaks.postingcopied=تم نسخ الرسالة %s في الحافظة.
 foxtrick.tweaks.youthstatistics=Youth Statistics ht-ys.org
 
 #matches
-foxtrick.matches.attackdefensebars=Attack vs Defense
-foxtrick.matches.right=Right
-foxtrick.matches.left=Left
-foxtrick.matches.center=Central
-foxtrick.matches.defense=def
-foxtrick.matches.attack=att
-foxtrick.matches.indfreekick=Ind. set pieces
-foxtrick.matches.wronglang=FoxTrick: The stats cannot be displayed because your language is not registered or because you've set the wrong language in preferences. Please make sure your Foxtrick language is the same as your Hattrick language.
+foxtrick.matches.attackdefensebars=الهجوم ضد الدفاع
+foxtrick.matches.right=يمين
+foxtrick.matches.left=يسار
+foxtrick.matches.center=وسط
+foxtrick.matches.defense=دفاع
+foxtrick.matches.attack=هجوم
+foxtrick.matches.indfreekick=الركلات الثابتة غير المباشرة
+foxtrick.matches.wronglang=FoxTrick: لا يمكن عرض الإحصائيات لأن لغتك غير مسجلة أو لأنك اخترت اللغة الخطأ في التفضيلات. الرجاء التأكد من أن لغة FoxTrick التي تستخدمها مطابقة للغة هاتريك.
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
-foxtrick.matches.suppstats=Supporter Statistics
+foxtrick.matches.suppstats=إحصائيات الداعم
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
-copy.id=Copy %s: %i
-copy.link=Copy Link Location in HT-ML
-copy.ht-ml=Copy in HT-ML
-copy.table=Copy Table in HT-ML
+copy.id=نسخ %s: %i
+copy.link=نسخ موقع الرابط بصيغة HT-ML
+copy.ht-ml=نسخ بصيغة HT-ML
+copy.table=نسخ الجدول بصيغة HT-ML
 
 #teampopups
-Manager=Manager
-Team=Team
-TeamAtAlltid=Team at Alltid
-Matches=Matches
-Players=Players
-last_5_ips=5 latest logins
-Guestbook=Guestbook
-SendMessage=Send message
-Challenge=Challenge
-Achievements=Achievements
-TransferHistory=Transfer history
-TeamHistory=Club history
-NextMatch=Next match
-AddNextMatch=Add next match to HT Live
-LastLineup=Last Lineup
-YouthMatches=Youth matches
-more=more...
-less=less...
-TeamPopupLinks.prefsCaption=Link preferences
-TeamPopupLinks.ShowByDefault=Show by default
-TeamPopupLinks.ShowOnMore=Show on more
+Manager=المدير الفني
+Team=الفريق
+TeamAtAlltid=الفريق في Alltid
+Matches=المباريات
+Players=اللاعبين
+last_5_ips=آخر 5 تسجيلات دخول
+Guestbook=سجل الزوار
+SendMessage=إرسال رسالة
+Challenge=تحدي
+Achievements=الإنجازات
+TransferHistory=تاريخ الإنتقالات
+TeamHistory=تاريخ النادي
+NextMatch=المباراة القادمة
+AddNextMatch=إضافة المباراة القادمة إلى HT Live
+LastLineup=آخر تشكيلة
+YouthMatches=مباريات الشباب
+more=أكثر...
+less=أقل...
+TeamPopupLinks.prefsCaption=رابط التفضيلات
+TeamPopupLinks.ShowByDefault=إظهار بشكل إفتراضي
+TeamPopupLinks.ShowOnMore=إظهار في أكثر
 
-total_stars=Total stars
+total_stars=مجموع النجوم
 
 # FlagCollectionToMap
-foxtrick.FlagCollectionToMap.ShowMap=Show map
-foxtrick.FlagCollectionToMap.HideMap=Hide map
-foxtrick.FlagCollectionToMap.Africa=Africa
-foxtrick.FlagCollectionToMap.Asia=Asia
-foxtrick.FlagCollectionToMap.Europe=Europe
-foxtrick.FlagCollectionToMap.MEast=Middle East
-foxtrick.FlagCollectionToMap.SAmerica=South America
-foxtrick.FlagCollectionToMap.World=World
+foxtrick.FlagCollectionToMap.ShowMap=إظهار الخريطة
+foxtrick.FlagCollectionToMap.HideMap=إخفاء الخريطة
+foxtrick.FlagCollectionToMap.Africa=أفريقيا
+foxtrick.FlagCollectionToMap.Asia=آسيا
+foxtrick.FlagCollectionToMap.Europe=أوروبا
+foxtrick.FlagCollectionToMap.MEast=الشرق الأوسط
+foxtrick.FlagCollectionToMap.SAmerica=أمريكا الجنوبية
+foxtrick.FlagCollectionToMap.World=العالم
 
 # SkillTable
-Skill_table=Skill Table
+Skill_table=جدول المهارات
 
-Nationality=Nationality
-Nationality.abbr=Nat
-Flag=Flag
-Flag.abbr=Flag
-Player=Player
-Player.abbr=Player
-Age=Age
-Age.abbr=Age
-Match=Match
-Series=Series
+Nationality=الجنسية
+Nationality.abbr=جنس
+Flag=العلم
+Flag.abbr=علم
+Player=اللاعب
+Player.abbr=لاعب
+Age=العمر
+Age.abbr=عمر
+Match=المباراة
+Series=الدوري
 
-TransferCompare=TransferCompare
-TransferCompare.abbr=TC
-Bookmark=Bookmark
-Bookmark.abbr=Bm
-Deadline=Deadline
-Deadline.abbr=Deadline
-CurrentBid=Current bid
-CurrentBid.abbr=Bid
-CurrentBidder=Current highest bidder
-CurrentBidder.abbr=Bidder
-CurrentBidderShort=Current highest bidder
-CurrentBidderShort.abbr=Bd
+TransferCompare=مقارنة الإنتقالات
+TransferCompare.abbr=مق
+Bookmark=علامة
+Bookmark.abbr=علم
+Deadline=الموعد النهائي
+Deadline.abbr=موعد
+CurrentBid=المزايدة الحالية
+CurrentBid.abbr=مز
+CurrentBidder=المزايد الأعلى حاليا
+CurrentBidder.abbr=مزايد
+CurrentBidderShort=المزايد الأعلى حاليا
+CurrentBidderShort.abbr=مزايد
 
 
-Senior=Senior
-Youth=Youth
+Senior=أول
+Youth=شباب
 
-team.status.booked=Friendly booked
-ShowFriendlyBooked.ShowFriendlies=Show friendlies
+team.status.booked=تم حجز المباراة الودية
+ShowFriendlyBooked.ShowFriendlies=إظهار المباريات الودية
 
 
 # TransferSearchResultFilters
-TransferSearchResultFilters.hideBruised=Hide bruised
-TransferSearchResultFilters.hideInjured=Hide injured
-TransferSearchResultFilters.hideSuspended=Hide suspended
-TransferSearchResultFilters.days=Days:
+TransferSearchResultFilters.hideBruised=إخفاء الكدمات
+TransferSearchResultFilters.hideInjured=إخفاء الإصابات
+TransferSearchResultFilters.hideSuspended=إخفاء الإيقافات
+TransferSearchResultFilters.days=أيام:
 
 # refer to transfer search form
-minimum=At least
-maximum=Maximum
+minimum=على الأقل
+maximum=على الأكثر
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now' 
-foxtrick.RapidId.ViewById=View By ID
+foxtrick.RapidId.ViewById=عرض حسب الرقم
 
 # SkillTable
-foxtrick.SkillTable.Switch_view_title=Switch the view of the table.
-foxtrick.SkillTable.Add_homegrown_title=Adds all homegrown players from the current
-foxtrick.SkillTable.Remove_bot_players_title=Removes players of bot teams
-foxtrick.SkillTable.showTimeInClub_title=Shows time since player joined the club's senior team
-foxtrick.SkillTable.detach=Detach
+foxtrick.SkillTable.Switch_view_title=تغيير عرض الجدول.
+foxtrick.SkillTable.Add_homegrown_title=يقوم بإضافة كل اللاعبين الناشئين من الحاليين
+foxtrick.SkillTable.Remove_bot_players_title=يقوم بإزالة اللاعبين من أندية الكمبيوتر
+foxtrick.SkillTable.showTimeInClub_title=يقوم بإظهار الوقت منذ أن إنضم اللاعب إلى الفريق الأول
+foxtrick.SkillTable.detach=فصل
 
 # External Chat
 foxtrick.LeagueAndMatchChat.MatchChat=Non HT Match Chat
@@ -835,52 +835,52 @@ foxtrick.LeagueAndMatchChat.FederationChat=Non HT Federation Chat
 
 
 # HTMSPrediction
-HTMSPrediction.prediction=Predicted result
-HTMSPrediction.winDrawLoss=win/draw/loss
-HTMSPrediction.title=Match Analysis by HTMS
-HTMSPrediction.changePrediction=Change prediction
+HTMSPrediction.prediction=النتيجة المتوقعة
+HTMSPrediction.winDrawLoss=فوز/تعادل/خسارة
+HTMSPrediction.title=تحليل المباراة بواسطة HTMS
+HTMSPrediction.changePrediction=تغيير التوقع
 
 # HTMSPoints
-HTMSPoints=HTMS Points:
-HTMSPoints.AbilityAndPotential=Ability: %1 / Potential: %2
+HTMSPoints=نقاط HTMS:
+HTMSPoints.AbilityAndPotential=القدرة: %1 / الإمكانية: %2
 
 # CrossTable
-CrossTable.graph=Season graph
-CrossTable.table=Cross table
+CrossTable.graph=الرسم البياني الخاص بالموسم
+CrossTable.table=الجدول
 # will be shown as "R13" denoting round 13
-CrossTable.round=R%s
-CrossTable.noMatches=No matches has been played yet.
+CrossTable.round=ج%s
+CrossTable.noMatches=لم يتم لعب أي مباراة حتى الآن.
 
 # MyMonitor
-MyMonitor.header=My Monitor
-MyMonitor.teams=%s teams in monitor
-MyMonitor.add=Monitor this team
-MyMonitor.remove=Remove this team from my monitor
-MyMonitor.addHelp=Go to the team that you want to monitor, and you could see a box on the sidebar for adding the team.
-MyMonitor.removeTeam=Select a team to remove:
+MyMonitor.header=شاشتي
+MyMonitor.teams=%s فريق في الشاشة
+MyMonitor.add=راقب هذا الفريق
+MyMonitor.remove=إزالة هذا الفريق من شاشتي
+MyMonitor.addHelp=توجه إلى الفريق الذي تود مراقبته ومن ثم قم بإضافته إلى شاشتك.
+MyMonitor.removeTeam=إختر فريق لإزالته:
 # %n, %t and %i will be replaced by team name, type and ID respectively
 MyMonitor.removeTeamFormat=%n (%t, #%i)
-MyMonitor.type.senior=Senior
-MyMonitor.type.youth=Youth
-MyMonitor.type.nt=National
+MyMonitor.type.senior=أول
+MyMonitor.type.youth=شباب
+MyMonitor.type.nt=وطني
 
 # MarkAllAsRead
-MarkAllAsRead.title=Mark threads in all forums as read
+MarkAllAsRead.title=حدد المواضيع في كل المنتديات كمقروءة
 
 # TickerAlert
-TickerAlert.enable=Enable
-TickerAlert.sound=Sound
+TickerAlert.enable=تمكين
+TickerAlert.sound=صوت
 
 # tickers
-ticker.type.welcome=Welcome message
-ticker.type.supporter=Supported team logs in
-ticker.type.forum=Forum replies
-ticker.type.transfer=Transfer info
-ticker.type.challenge=Challenge
-ticker.type.guestbook=Guestbook
-ticker.type.mail=HT-Mail
-ticker.type.myht=My Hattrick message
-ticker.type.others=Others
+ticker.type.welcome=رسالة ترحيبية
+ticker.type.supporter=تسجيل دخول الفرق المدعومة
+ticker.type.forum=ردود المنتدى
+ticker.type.transfer=معلومات الإنتقال
+ticker.type.challenge=تحدي
+ticker.type.guestbook=سجل الزوار
+ticker.type.mail=رسالة هاتريك
+ticker.type.myht=رسالة هاتريك الخاصة بي
+ticker.type.others=أخرى
 
 # LocalTime
 LocalTime.hattrick=Hattrick time
