--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -957,8 +957,8 @@ prefs.screenshot=Screenshot
 # tabs in preferences page
 #tabs
 tab.main=Grundeinstellungen
-tab.pagefiltered=Seitenmodule
-tab.allfiltered=Universalmodule
+tab.on_page=Seitenmodule
+tab.universal=Universalmodule
 tab.informationAggregation=Information
 tab.shortcutsAndTweaks=Shortcuts & Erweiterungen
 tab.presentation=Darstellung
@@ -1014,8 +1014,8 @@ about.developers=Developers
 about.translators=Translators
 about.designers=Designers
 
-filter.all=Nach Kategorie
-filter.page=Nach letzte HT-Seite
+prefs.view.by.category=Nach Kategorie
+prefs.view.by.page=Nach letzte HT-Seite
 
 delete_foxtrick_branches_ask=Wirklich alle Einstellungen zurücksetzen?\n FireFox muss danach neu gestartet werden!
 disable_all_foxtrick_modules_ask=Sollen wirklich alle Module deaktiviert werden?\n
