--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -968,8 +968,8 @@ prefs.screenshot=Screenshot
 # tabs in preferences page
 #tabs
 tab.main=Principala
-tab.pagefiltered=Module de pagina
-tab.allfiltered=Module universale
+tab.on_page=Module de pagina
+tab.universal=Module universale
 tab.informationAggregation=Informatii
 tab.shortcutsAndTweaks=Scurtaturi
 tab.presentation=Prezentare
@@ -1027,8 +1027,8 @@ about.developers=Developeri
 about.translators=Translatori
 about.designers=Designeri
 
-filter.all=Dupa categorii
-filter.page=Dupa ultima pagina HT
+prefs.view.by.category=Dupa categorii
+prefs.view.by.page=Dupa ultima pagina HT
 
 delete_foxtrick_branches_ask=Esti sigur ca vrei sa restaurezi setarile implicite?
 disable_all_foxtrick_modules_ask=Esti sigur ca vrei sa dezactivezi toate modulele?
