--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -956,8 +956,8 @@ prefs.screenshot=Снимок экрана
 # tabs in preferences page
 #tabs
 tab.main=Главные
-tab.pagefiltered=Модули, использующиеся на странице
-tab.allfiltered=Универсальные модули
+tab.on_page=Модули, использующиеся на странице
+tab.universal=Универсальные модули
 tab.informationAggregation=Информация
 tab.shortcutsAndTweaks=Расширения
 tab.presentation=Внешний вид
@@ -1012,8 +1012,8 @@ about.developers=Разработчики
 about.translators=Переводчики
 about.designers=Художники
 
-filter.all=По категориям
-filter.page=По последним открытым страницам HT
+prefs.view.by.category=По категориям
+prefs.view.by.page=По последним открытым страницам HT
 
 delete_foxtrick_branches_ask=Вы действительно хотите восстановить значения по умолчанию?
 disable_all_foxtrick_modules_ask=Вы уверены, что хотите отключить все модули Foxtrick?
