--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -1008,8 +1008,8 @@ prefs.screenshot=Слика са објашњењима опција за мод
 # tabs in preferences page
 #tabs
 tab.main=Главне опције
-tab.pagefiltered=Модули на овој страници
-tab.allfiltered=Универзални модули
+tab.on_page=Модули на овој страници
+tab.universal=Универзални модули
 tab.informationAggregation=Додатне информације
 tab.shortcutsAndTweaks=Пречице и додаци
 tab.presentation=Изглед и алати
@@ -1076,8 +1076,8 @@ about.projectOwners=Власници лиценце
 about.developers=Програмери
 about.translators=Преводиоци
 about.designers=Дизајнери
-filter.all=Сви модули
-filter.page=Само модули на страници
+prefs.view.by.category=Сви модули
+prefs.view.by.page=Само модули на страници
 
 disable_all_foxtrick_modules_ask=Заиста желите да искључите све Фокстрик модуле?
 delete_foxtrick_branches_ask=Да ли сте сигурни да желите да обришете сва подешавања?
