--- a/content/locale/sv/foxtrick.properties
+++ b/content/locale/sv/foxtrick.properties
@@ -1211,8 +1211,8 @@ prefs.screenshot=Skärmdump
 # tabs in preferences page
 #tabs
 tab.main=Startsida
-tab.pagefiltered=Moduler pådenna sida
-tab.allfiltered=Universella moduler
+tab.on_page=Moduler pådenna sida
+tab.universal=Universella moduler
 tab.informationAggregation=Sammanslagen Info
 tab.shortcutsAndTweaks=Genvägar och Modifieringar
 tab.presentation=Presentation
@@ -1305,8 +1305,8 @@ about.developers=Utvecklare
 about.translators=Översättare
 about.designers=Designers
 
-filter.all=Kategori
-filter.page=Senaste hattricksida
+prefs.view.by.category=Kategori
+prefs.view.by.page=Senaste hattricksida
 
 delete_foxtrick_branches_ask=Är du säker på att du vill återställa till standardinställningarna?
 disable_all_foxtrick_modules_ask=Är du säker på att du vill inaktivera samtliga moduler?
