--- a/content/locale/es/foxtrick.properties
+++ b/content/locale/es/foxtrick.properties
@@ -932,8 +932,8 @@ prefs.screenshot=Captura de pantalla
 
 # tabs in preferences page
 tab.main=Principal
-tab.pagefiltered=Módulos de página
-tab.allfiltered=Módulos universales
+tab.on_page=Módulos de página
+tab.universal=Módulos universales
 tab.informationAggregation=Información de agregación
 tab.shortcutsAndTweaks=Accesos directos y trucos
 tab.presentation=Presentación
@@ -989,8 +989,8 @@ about.developers=Desarrolladores
 about.translators=Traductores
 about.designers=Diseñadores
 
-filter.all=Por categoría
-filter.page=Por última página HT
+prefs.view.by.category=Por categoría
+prefs.view.by.page=Por última página HT
 
 delete_foxtrick_branches_ask=¿Seguro que quieres restaurar los valores por defecto?\n¡Firefox se reiniciará!
 disable_all_foxtrick_modules_ask=¿Desea deshabilitar todos los módulos?\n
